@@ -1,5 +1,10 @@
 2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	bug #55009: no efuses for m164a/pa
+	* avrdude.conf.in (ATmega164P): derive from ATmega324P
+
+2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by evan Venn:
 	bug #59227: Add new part. How does one get a part added to the CONF file?
 	* avrdude.conf.in (LGT8FX88P, LGT8FX168P, LGT8FX328P): new parts
